api/swim_form/src/tests/derive/form/generic.stderr
error[E0599]: the method `as_value` exists for struct `S<main::Valid, main::Invalid>`, but its trait bounds were not satisfied
  --> $DIR/generic.rs:34:15
   |
24 |     struct S<A, B> {
   |     --------------
   |     |
   |     method `as_value` not found for this
   |     doesn't satisfy `S<main::Valid, main::Invalid>: Form`
   |     doesn't satisfy `S<main::Valid, main::Invalid>: StructuralReadable`
   |     doesn't satisfy `S<main::Valid, main::Invalid>: StructuralWritable`
...
34 |     let _ = s.as_value();
   |               ^^^^^^^^ method cannot be called on `S<main::Valid, main::Invalid>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `S<main::Valid, main::Invalid>: StructuralReadable`
           which is required by `S<main::Valid, main::Invalid>: Form`
           `S<main::Valid, main::Invalid>: StructuralWritable`
           which is required by `S<main::Valid, main::Invalid>: Form`
